fixing homepage logo size on small screens

--- a/wp-content/themes/reformer/sass/modules/header.scss
+++ b/wp-content/themes/reformer/sass/modules/header.scss
@@ -140,9 +140,10 @@ body.home .container.navigation-container {
   }
 
 }
-@media (min-width: 1024px) {}
-body.home .site-title a {
-   width: 150px;
+@media (min-width: 1024px) {
+  body.home .site-title a {
+     width: 150px;
+  }
 }
 .secondary-navigation {
   display: none;
